HOT FIX - Prototype out of screen

--- a/styles/pages/HomePage/_homepage.scss
+++ b/styles/pages/HomePage/_homepage.scss
@@ -419,7 +419,6 @@
 
 .container__right {
 	height: 90vh;
-	width: 100vw;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
